fix: comprehensive security, performance, and reliability improvements
Phase 1 — Critical:
- Fix Kafka trusted.packages wildcard → whitelist com.scm.domain,com.scm.events (RCE fix)
- Rewrite JwtTokenProvider to use persistent HMAC-SHA256 from JWT_SECRET env var
- Remove hardcoded JWT_SECRET fallback default
- Fix Python CORS allow_headers wildcard → explicit header list
- Convert Kubernetes secrets.yaml to ExternalSecret (AWS Secrets Manager)
- Fix forecast.py DataFrame.get() crash → DataFrame["col"].iloc[0]
- Fix batch_forecast missing fastapi_req parameter

Phase 2 — High Priority:
- Fix duplicate ModelRegistry in models/__init__.py (re-exports from core)
- Add missing settings import in core/model_registry.py
- Fix N+1 query: OrderRepository.search() uses LEFT JOIN FETCH with count query
- Fix InventoryRepository.findTopByValue redundant double-join on products table
- Rename revenueS → revenueSince for clarity
- Add @NotBlank/@Email/@NotNull/@PositiveOrZero validation to Order, Product, Supplier
- Replace raw fetch() with scmApi in Analytics, Finance, Quality, Compliance, Warehouse, Procurement
- Fix Forecasting.tsx field mapping: f.ds→f.date, f.yhat→f.predicted_demand
- Externalize CORS origins to ${ALLOWED_ORIGINS} env var; remove hardcoded GitHub Pages URL
- Add @PreAuthorize to LogisticsController.track() endpoint
- Create V4__add_performance_indexes.sql (15 indexes on orders, inventory, products, suppliers)

Phase 3 — Medium Priority:
- Add @Cacheable to OrderService.getStats/getOrderTrend + @CacheEvict on mutations
- Enable Prometheus metrics export (management.metrics.export.prometheus.enabled=true)
- Add structured JSON logging with correlationId MDC field
- Configure Kafka DLT retry (3 attempts, exponential backoff); set auto-offset-reset: latest
- Add pod securityContext to all deployments: runAsNonRoot, readOnlyRootFilesystem, drop ALL caps
- Remove duplicate AI/ML hpa.yaml; keep only inline autoscaling/v2 HPA
- Reduce backend HPA memory target 80% → 